# slang-autos

./: .gitignore  .gitmodules  BUGS.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  python-requirements.txt  sourceme
.github/workflows/: docs.yml
docs/: conf.py  index.rst
docs/source/: analyzer-architecture.rst  conf.py  index.rst  rewriter-architecture.rst  templating.rst  vscode-extension.rst
extensions/lsp/: AutosServer.cpp  AutosServer.h  CMakeLists.txt  main.cpp
extensions/vscode/: README.md  package-lock.json  package.json  tsconfig.json
include/lsp/: JsonRpc.h  JsonRpcServer.h  JsonTypes.h  LspClient.h  LspServer.h  LspTypes.h  URI.h
src/: AutosAnalyzer.cpp  AutosRewriter.cpp  AutowireRewriter.cpp  CompilationUtils.cpp  Config.cpp  Diagnostics.cpp  DotStarExpander.cpp  Expander.cpp  Parser.cpp  SignalAggregator.cpp  TemplateMatcher.cpp  Tool.cpp  Writer.cpp  main.cpp  main_expand.cpp
tests/: CMakeLists.txt  test_config.cpp  test_dotstar_expander.cpp  test_expander.cpp  test_integration.cpp  test_main.cpp  test_parser.cpp  test_signal_aggregator.cpp  test_template_matcher.cpp  test_tool.cpp  test_writer.cpp
tests/fixtures/adversarial/: already_expanded.sv  autoinst_in_string.sv  expanded_with_whitespace.sv  multiple_autoinst.sv  special_names.sv  unidirectional.sv  wide_bus_top.sv
tests/fixtures/adversarial/lib/: inputs_only.sv  outputs_only.sv  submod.sv  wide_bus.sv
tests/fixtures/autologic/: sub.sv  top.sv  top2.sv  top3.sv  top_pipeline.sv
tests/fixtures/autologic/lib/: consumer.sv  producer.sv
tests/fixtures/autoports/: top.sv
tests/fixtures/autoports/lib/: submod.sv
tests/fixtures/autoports_assign_concat/: top.sv  top_no_decl.sv  top_rhs.sv
tests/fixtures/autoports_assign_concat/lib/: child.sv  producer.sv
tests/fixtures/autoports_basic/: top.sv  top_unsorted.sv
tests/fixtures/autoports_basic/lib/: submod.sv
tests/fixtures/autoports_concatenation/: top.sv
tests/fixtures/autoports_concatenation/lib/: child.sv
tests/fixtures/autoports_internal_signal/: top.sv
tests/fixtures/autoports_internal_signal/lib/: child.sv
tests/fixtures/autoports_local_decl/: top.sv
tests/fixtures/autoports_local_decl/lib/: child.sv
tests/fixtures/autoports_local_redecl/: top.sv
tests/fixtures/autoports_packed_array/: top.sv  top2.sv  top3.sv  top4.sv  top5.sv  top6.sv
tests/fixtures/autoports_packed_array/lib/: child.sv  producer.sv
tests/fixtures/autoports_reroute/: top.sv
tests/fixtures/autoports_reroute/lib/: consumer.sv  producer.sv
tests/fixtures/autoports_struct/: top.sv  top2.sv
tests/fixtures/autoports_struct/lib/: child.sv
tests/fixtures/autoports_struct_member/: top.sv
tests/fixtures/autoports_struct_member/lib/: child.sv
tests/fixtures/autoports_template_rename/: top.sv  top2.sv  top3.sv  top_partsel.sv
tests/fixtures/autoports_template_rename/lib/: child.sv  child2.sv  child3.sv  debug_module.sv
tests/fixtures/autoports_user_defined/: top.sv
tests/fixtures/autoports_user_defined/lib/: consumer.sv  producer.sv
tests/fixtures/autoports_wire_nettype/: top.sv
tests/fixtures/autoreg/: top.sv
tests/fixtures/autoreg/lib/: submod.sv
tests/fixtures/autowire_basic/: top.sv
tests/fixtures/autowire_constants/: top.sv
tests/fixtures/autowire_inout/: top.sv
tests/fixtures/autowire_inout/lib/: bidir.sv
tests/fixtures/autowire_reexpand/: top.sv
tests/fixtures/autowire_reexpand/lib/: submod.sv
tests/fixtures/autowire_skip_declared/: top.sv
tests/fixtures/autowire_template_rename/: top.sv
tests/fixtures/autowire_width_conflict/: top.sv
tests/fixtures/autowire_width_conflict/lib/: narrow.sv  wide.sv
tests/fixtures/direction_comments/: top.sv
tests/fixtures/direction_comments_custom/: top.sv
tests/fixtures/direction_comments_custom/lib/: submod.sv
tests/fixtures/dotstar_mixed/: top.sv
tests/fixtures/dotstar_mixed/lib/: submod.sv
tests/fixtures/dotstar_simple/: top.sv
tests/fixtures/errors/: bad_syntax.sv  missing_module.sv
tests/fixtures/grouping_declaration/: top.sv
tests/fixtures/grouping_declaration/lib/: submod.sv
tests/fixtures/grouping_declaration_autoports/: top.sv
tests/fixtures/hierarchy_depth/: top.sv
tests/fixtures/hierarchy_depth/lib/: child.sv  grandchild.sv
tests/fixtures/indentation/: top.sv
tests/fixtures/indentation/lib/: submod.sv
tests/fixtures/inline_wire_decl/: top.sv
tests/fixtures/inline_wire_decl/lib/: child.sv
tests/fixtures/instance_array/: top.sv
tests/fixtures/instance_array/lib/: sync_pulse.sv
tests/fixtures/macro_test/: top.sv
tests/fixtures/macro_test/lib/: sub.sv
tests/fixtures/manual_ports/: top_no_comma.sv
tests/fixtures/manual_ports/lib/: submod.sv
tests/fixtures/mixed_internal_external/: top.sv
tests/fixtures/mixed_internal_external/lib/: consumer.sv  producer.sv
tests/fixtures/multi_instance/: top.sv
tests/fixtures/multi_instance/lib/: consumer.sv  producer.sv
tests/fixtures/multi_template/: top.sv
tests/fixtures/multi_template/lib/: submod.sv
tests/fixtures/multiport/: top.sv
tests/fixtures/multiport/lib/: submod.sv
tests/fixtures/packed_array_resolved/: top.sv
tests/fixtures/packed_array_resolved/lib/: child.sv
tests/fixtures/param_width/: top_autologic.sv
tests/fixtures/param_width/lib/: submod.sv
tests/fixtures/simple/: top.sv
tests/fixtures/simple/lib/: submod.sv
tests/fixtures/template_trailing_paren/: top.sv
tests/fixtures/template_trailing_paren/lib/: submod.sv
tests/fixtures/templates/: top.sv
tests/fixtures/templates/lib/: fifo.sv
tests/fixtures/unpacked_array/: top.sv
tests/fixtures/unpacked_array/lib/: child.sv
tests/fixtures/width_adaptation/: top_pad_input.sv  top_single_bit.sv  top_slice.sv  top_unused_output.sv  top_wide_to_narrow_slice.sv  top_zero_pad.sv
tests/fixtures/width_adaptation/lib/: consumer_narrow.sv  consumer_wide.sv  narrow.sv  one_bit.sv  producer_narrow.sv  producer_wide.sv  wide.sv
(+15 files in other folders)
